force-app/main/default/objects/Component__c/fields/AE_SB__c.field-meta.xml
<CustomField>
    <fullName>AE_SB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE/SB</label>
    <referenceTo>AE_SB__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>