force-app/main/default/objects/Component__c/fields/Airline_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Airline_Upgrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline Upgrade</label>
    <referenceTo>airline_upgrade__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>