force-app/main/default/objects/Component__c/fields/Allocations_Sold__c.field-meta.xml
<CustomField>
    <fullName>Allocations_Sold__c</fullName>
    <formula>Deal__r.QTY_Sold__c +  Options__r.QTY_Sold__c +   Sub_Options__r.Sold__c  +  Land_Activity__r.Total_Sold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocations Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>