force-app/main/default/objects/Component__c/fields/Available_in_Merchant_Portal__c.field-meta.xml
<CustomField>
    <fullName>Available_in_Merchant_Portal__c</fullName>
    <label>Available in Merchant Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>