force-app/main/default/objects/Component__c/fields/AVG_Cost__c.field-meta.xml
<CustomField>
    <fullName>AVG_Cost__c</fullName>
    <label>AVG Cost</label>
    <summarizedField>Component_Pricing__c.Cost__c</summarizedField>
    <summaryForeignKey>Component_Pricing__c.Component__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>