force-app/main/default/objects/Component__c/fields/BC_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>BC_Due_Date__c</fullName>
    <label>BC Due Date</label>
    <type>Date</type>
</CustomField>