force-app/main/default/objects/Component__c/fields/BC_Due_X_days_prior__c.field-meta.xml
<CustomField>
    <fullName>BC_Due_X_days_prior__c</fullName>
    <label>BC Due X days prior</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>