force-app/main/default/objects/Component__c/fields/Cancellation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation Policy</label>
    <referenceTo>Cancellation_Policy__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>