force-app/main/default/objects/Component__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <label>Cloned From</label>
    <length>100</length>
    <type>Text</type>
</CustomField>