force-app/main/default/objects/Component__c/fields/Component_Days__c.field-meta.xml
<CustomField>
    <fullName>Component_Days__c</fullName>
    <label>Component Days</label>
    <length>155</length>
    <type>Text</type>
</CustomField>