force-app/main/default/objects/Component__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flight</fullName>
            </value>
            <value>
                <fullName>Land Tour</fullName>
            </value>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Total Package</fullName>
            </value>
            <value>
                <fullName>Accom</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Land Activity</fullName>
            </value>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>SB</fullName>
            </value>
            <value>
                <fullName>S/Over</fullName>
                <label>Stop Over Land Cost</label>
            </value>
            <value>
                <fullName>Flight Upgrade</fullName>
            </value>
            <value>
                <fullName>Departure City Surcharge</fullName>
            </value>
            <value>
                <fullName>AE Accommodation</fullName>
            </value>
            <value>
                <fullName>SB Accommodation</fullName>
            </value>
            <value>
                <fullName>Day Tour</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>Flight HSS</fullName>
            </value>
            <value>
                <fullName>Stop Over Air cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>