force-app/main/default/objects/Component__c/fields/Cost_AUD__c.field-meta.xml
<CustomField>
    <fullName>Cost_AUD__c</fullName>
    <formula>Nett_Cost__c  /  Product_FX_Pricing__r.Hedged_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost(AUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>