force-app/main/default/objects/Component__c/fields/Cost_Model__c.field-meta.xml
<CustomField>
    <fullName>Cost_Model__c</fullName>
    <label>Cost Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per PAX</fullName>
                <default>true</default>
                <label>Per PAX</label>
            </value>
            <value>
                <fullName>Per QTY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>