force-app/main/default/objects/Component__c/fields/Cruise_Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Booked_By__c</fullName>
    <label>Cruise Booked By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>TAD Cruise</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>