force-app/main/default/objects/Component__c/fields/Cruise_Ticket_Due__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Ticket_Due__c</fullName>
    <label>Cruise Ticket Due</label>
    <type>Date</type>
</CustomField>