force-app/main/default/objects/Component__c/fields/Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Currency_Type__c</fullName>
    <formula>IF(AND(OR(CONTAINS(LinkedDeal_D_O_S__r.order_filter__c,&apos;TAD&apos;),CONTAINS(LinkedDeal_D_O_S__r.order_filter__c,&apos;TC&apos;)),OR(CONTAINS(LinkedDeal_D_O_S__r.order_filter__c,&apos;TNZ&apos;),CONTAINS(LinkedDeal_D_O_S__r.order_filter__c,&apos;WT&apos;))), &apos;ALL&apos;, IF( OR(CONTAINS(LinkedDeal_D_O_S__r.order_filter__c,&apos;TAD&apos;),CONTAINS(LinkedDeal_D_O_S__r.order_filter__c,&apos;TC&apos;)) , &apos;AUD&apos;, IF( OR(CONTAINS(LinkedDeal_D_O_S__r.order_filter__c,&apos;TNZ&apos;),CONTAINS(LinkedDeal_D_O_S__r.order_filter__c,&apos;WT&apos;)) , &apos;NZD&apos;, &apos;&apos;)))</formula>
    <label>Currency Type</label>
    <type>Text</type>
</CustomField>