force-app/main/default/objects/Component__c/fields/Deal_D_O_S__c.field-meta.xml
<CustomField>
    <fullName>Deal_D_O_S__c</fullName>
    <formula>IF( NOT(ISBLANK( Deal__c )) , Deal__r.Name , IF(NOT(ISBLANK(  Options__c  )),  Options__r.Deal__r.Name ,  Sub_Options__r.Linked_Deal_Via_Opt__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal(D/O/S)</label>
    <type>Text</type>
</CustomField>