force-app/main/default/objects/Component__c/fields/DealID__c.field-meta.xml
<CustomField>
    <fullName>DealID__c</fullName>
    <formula>Deal__r.Name&amp;Options__r.Deal__r.Name&amp;Sub_Options__r.options__r.Deal__r.Name&amp;Land_Activity__r.Deal__r.Name&amp;AE_SB__r.Deal__r.Name&amp;Stopover__r.Deal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DealID</label>
    <type>Text</type>
</CustomField>