force-app/main/default/objects/Component__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <summarizedField>Itinerary_Component_Join__c.Days_Number__c</summarizedField>
    <summaryForeignKey>Itinerary_Component_Join__c.Component__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>