force-app/main/default/objects/Component__c/fields/ff_Every_X_PAX_is_free__c.field-meta.xml
<CustomField>
    <fullName>ff_Every_X_PAX_is_free__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Every X PAX is free</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>