force-app/main/default/objects/Component__c/fields/ff_GST_Rule__c.field-meta.xml
<CustomField>
    <fullName>ff_GST_Rule__c</fullName>
    <formula>TEXT(LinkedDeal_D_O_S__r.ff_GST_Sales_Rule__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Rule</label>
    <type>Text</type>
</CustomField>