force-app/main/default/objects/Component__c/fields/ff_Pricing_structure__c.field-meta.xml
<CustomField>
    <fullName>ff_Pricing_structure__c</fullName>
    <label>Tiered Cost Rule</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not applicable</fullName>
                <label>General</label>
            </value>
            <value>
                <fullName>Cost Updates</fullName>
                <label>Tiered: Cost updates</label>
            </value>
            <value>
                <fullName>No Order Lines</fullName>
                <isActive>false</isActive>
                <label>No Order Lines</label>
            </value>
            <value>
                <fullName>No Cost Updates</fullName>
                <isActive>false</isActive>
                <label>Tiered: No Cost updates</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>