force-app/main/default/objects/Component__c/fields/ff_Stopover_Type__c.field-meta.xml
<CustomField>
    <fullName>ff_Stopover_Type__c</fullName>
    <formula>IF(Stopover__c!=null, TEXT(Stopover__r.type__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stopover Type</label>
    <type>Text</type>
</CustomField>