force-app/main/default/objects/Component__c/fields/Group_vs_FIT__c.field-meta.xml
<CustomField>
    <fullName>Group_vs_FIT__c</fullName>
    <label>Group vs FIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIT</fullName>
                <default>true</default>
                <label>FIT</label>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>