force-app/main/default/objects/Component__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <label>Identifier</label>
    <length>79</length>
    <type>Text</type>
</CustomField>