force-app/main/default/objects/Component__c/fields/Is_Default_Departure_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Departure_Surcharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Component linked to the HSS - Cost?</label>
    <type>Checkbox</type>
</CustomField>