force-app/main/default/objects/Component__c/fields/Land_Activity__c.field-meta.xml
<CustomField>
    <fullName>Land_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Land Activity</label>
    <referenceTo>land_activity__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>