force-app/main/default/objects/Component__c/fields/Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User__c</fullName>
    <formula>$User.Email</formula>
    <label>Logged In User</label>
    <type>Text</type>
</CustomField>