force-app/main/default/objects/Component__c/fields/Max_Component_Price__c.field-meta.xml
<CustomField>
    <fullName>Max_Component_Price__c</fullName>
    <label>Max Component Price</label>
    <summarizedField>Component_Pricing__c.Cost__c</summarizedField>
    <summaryForeignKey>Component_Pricing__c.Component__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>