force-app/main/default/objects/Component__c/fields/Max_Min_Pax__c.field-meta.xml
<CustomField>
    <fullName>Max_Min_Pax__c</fullName>
    <label>Max Min Pax</label>
    <summarizedField>Component_Pricing__c.Min_Pax__c</summarizedField>
    <summaryForeignKey>Component_Pricing__c.Component__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>