force-app/main/default/objects/Component__c/fields/Min_Pax__c.field-meta.xml
<CustomField>
    <fullName>Min_Pax__c</fullName>
    <label>Min Pax</label>
    <summarizedField>Component_Pricing__c.Min_Pax__c</summarizedField>
    <summaryForeignKey>Component_Pricing__c.Component__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>