force-app/main/default/objects/Component__c/fields/mp_AE_SB_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>mp_AE_SB_Accommodation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE/SB Accommodation</label>
    <referenceTo>mp_AE_SB_Accommodation__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>