force-app/main/default/objects/Component__c/fields/MPT_JOIN__c.field-meta.xml
<CustomField>
    <fullName>MPT_JOIN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Terms</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>MPT_JOIN__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Merchant_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MPT_JOIN__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>