force-app/main/default/objects/Component__c/fields/Nett_Cost__c.field-meta.xml
<CustomField>
    <fullName>Nett_Cost__c</fullName>
    <inlineHelpText>Please input TAD&apos;s Nett cost for this component.</inlineHelpText>
    <label>Current Nett Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>