force-app/main/default/objects/Component__c/fields/Number_of_days_after_departure__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_after_departure__c</fullName>
    <label>Number of days after departure</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>