force-app/main/default/objects/Component__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Options</label>
    <referenceTo>options__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>