force-app/main/default/objects/Component__c/fields/ordexp_Component_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Component_Short_Name__c</fullName>
    <formula>IF(NOT(ISBLANK( Options__r.Name )),TEXT(Component_Type__c) &amp; &quot;-&quot; &amp; Options__r.Name,IF(NOT(ISBLANK( Sub_Options__r.Name )),TEXT(Component_Type__c) &amp; &quot;-&quot; &amp; Sub_Options__r.Name,IF(NOT(ISBLANK( Land_Activity__r.Name )),TEXT(Component_Type__c) &amp; &quot;-&quot; &amp; Land_Activity__r.Name, IF(NOT(ISBLANK( AE_SB__r.Name )),TEXT(Component_Type__c) &amp; &quot;-&quot; &amp; AE_SB__r.Name, IF(NOT(ISBLANK( Airline_Upgrade__r.Name )),TEXT(Component_Type__c) &amp; &quot;-&quot; &amp; Airline_Upgrade__r.Name, IF(NOT(ISBLANK( Stopover__r.Name)),TEXT(Component_Type__c) &amp; &quot;-&quot; &amp; Stopover__r.Name,IF(NOT(ISBLANK( City__r.Name )), City__r.departure_airport_code__c &amp; &quot;-&quot; &amp; City__r.Name,IF(AND(NOT(ISBLANK( Deal__r.Name)),NOT(ISBLANK(Deal__r.title__c ))),TEXT(Component_Type__c) &amp; &quot;-&quot; &amp; Deal__r.Name &amp; &quot;-&quot; &amp; Deal__r.title__c,IF(AND(NOT(ISBLANK( Deal__r.Name)),NOT(ISBLANK( Deal__r.title_nz__c))),TEXT(Component_Type__c) &amp; &quot;-&quot; &amp; Deal__r.Name &amp; &quot;-&quot; &amp; Deal__r.title_nz__c,&quot;Information Not Available&quot;)))))))))</formula>
    <label>Component Short Name</label>
    <type>Text</type>
</CustomField>