force-app/main/default/objects/Component__c/fields/Partner_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Partner_Deadline__c</fullName>
    <label>Partner Real End Date</label>
    <type>Date</type>
</CustomField>