force-app/main/default/objects/Component__c/fields/Partner_Sharing_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sharing_Deadline__c</fullName>
    <label>Partner Sharing Deadline</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>