force-app/main/default/objects/Component__c/fields/PAX_Sold__c.field-meta.xml
<CustomField>
    <fullName>PAX_Sold__c</fullName>
    <label>PAX Sold</label>
    <summarizedField>order_line_POE__c.PAX_Travelling__c</summarizedField>
    <summaryFilterItems>
        <field>order_line_POE__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>order_line_POE__c.OL_Type__c</field>
        <operation>equals</operation>
        <value>Component</value>
    </summaryFilterItems>
    <summaryForeignKey>order_line_POE__c.Component__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>