force-app/main/default/objects/Component__c/fields/Product_FX_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Product_FX_Pricing__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Currency</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Product_FX_Pricing__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_FX_Pricing__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>