force-app/main/default/objects/Component__c/fields/Related_CP_Lines__c.field-meta.xml
<CustomField>
    <fullName>Related_CP_Lines__c</fullName>
    <label>Related CP Lines</label>
    <summaryForeignKey>Component_Pricing__c.Component__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>