force-app/main/default/objects/Component__c/fields/Solo_Cost__c.field-meta.xml
<CustomField>
    <fullName>Solo_Cost__c</fullName>
    <label>Solo Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>