force-app/main/default/objects/Component__c/fields/Spot_Rate_NZD__c.field-meta.xml
<CustomField>
    <fullName>Spot_Rate_NZD__c</fullName>
    <formula>Product_FX_Pricing__r.Exchange_Rate_NZD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spot Rate NZD</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>