force-app/main/default/objects/Component__c/fields/SR_Component_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>SR_Component_Short_Name__c</fullName>
    <formula>Trim(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( SalesReport_Component__c ,&apos;Sold Out&apos;, &apos;&apos;),&apos;SOLD OUT&apos;, &apos;&apos;),&apos;Sold out&apos;,&apos;&apos;),&apos;sold out&apos;,&apos;&apos;),&apos;Sold Out&apos;,&apos;&apos;),&apos;OLD&apos;,&apos;&apos;),&apos;Old&apos;,&apos;&apos;),&apos;old&apos;,&apos;&apos;),&apos;NEW&apos;,&apos;&apos;),&apos;New&apos;,&apos;&apos;),&apos;new&apos;,&apos;&apos;))

/*
Trim(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( SalesReport_Component__c ,&apos;Sold Out&apos;, &apos;&apos;),&apos;SOLD OUT&apos;, &apos;&apos;),&apos;Sold out&apos;,&apos;&apos;),&apos;sold out&apos;,&apos;&apos;),&apos;Sold Out&apos;,&apos;&apos;),&apos;OLD&apos;,&apos;&apos;),&apos;Old&apos;,&apos;&apos;),&apos;old&apos;,&apos;&apos;),&apos;NEW&apos;,&apos;&apos;),&apos;New&apos;,&apos;&apos;),&apos;new&apos;,&apos;&apos;),&apos;-&apos;,&apos; &apos;)) */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR Component Short Name</label>
    <type>Text</type>
</CustomField>