force-app/main/default/objects/Component__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <summarizedField>Itinerary_Component_Join__c.Days_Number__c</summarizedField>
    <summaryForeignKey>Itinerary_Component_Join__c.Component__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>