force-app/main/default/objects/Component__c/fields/Start_Date_Validation__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Date Validation</label>
    <type>Checkbox</type>
</CustomField>