force-app/main/default/objects/Component__c/fields/Stopover__c.field-meta.xml
<CustomField>
    <fullName>Stopover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stopover</label>
    <referenceTo>sub_stopover__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>