force-app/main/default/objects/Component__c/fields/Sub_Option_ID__c.field-meta.xml
<CustomField>
    <fullName>Sub_Option_ID__c</fullName>
    <formula>Sub_Options__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Option ID</label>
    <type>Text</type>
</CustomField>