force-app/main/default/objects/Component__c/fields/Sub_Options__c.field-meta.xml
<CustomField>
    <fullName>Sub_Options__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Options</label>
    <referenceTo>sub_options__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>