force-app/main/default/objects/Component__c/fields/Ticketing_Side__c.field-meta.xml
<CustomField>
    <fullName>Ticketing_Side__c</fullName>
    <label>Ticketing Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TAD</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>