force-app/main/default/objects/Component__c/fields/Tier_Updated__c.field-meta.xml
<CustomField>
    <fullName>Tier_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tier Updated</label>
    <type>Checkbox</type>
</CustomField>