force-app/main/default/objects/Component__c/fields/To_currency_Internal__c.field-meta.xml
<CustomField>
    <fullName>To_currency_Internal__c</fullName>
    <formula>IF(Product_FX_Pricing__r.RBA_Exchange_Rate__c!=null, TEXT(Product_FX_Pricing__r.RBA_Exchange_Rate__r.currency_code__c)!=TEXT(CurrencyIsoCode), TEXT(Product_FX_Pricing__r.To_Currency__c) !=TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To currency Internal</label>
    <type>Checkbox</type>
</CustomField>