force-app/main/default/objects/Component__c/fields/Undeparted__c.field-meta.xml
<CustomField>
    <fullName>Undeparted__c</fullName>
    <formula>Allocations_Sold__c -  Departed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Undeparted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>