force-app/main/default/objects/Component__c/validationRules/Correct_Relation_AESB.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_Relation_AESB</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(TEXT(Component_Type__c) = &quot;AE&quot;, TEXT(Component_Type__c) = &quot;SB&quot;),ISBLANK(AE_SB__c))</errorConditionFormula>
    <errorDisplayField>AE_SB__c</errorDisplayField>
    <errorMessage>You can&apos;t relate the Component Type &quot;AE&quot; or &quot;SB&quot; by anything else but an AE/SB.</errorMessage>
</ValidationRule>