force-app/main/default/objects/Component__c/validationRules/Correct_Relation_Air_Up.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_Relation_Air_Up</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Component_Type__c) = &quot;Flight Upgrade&quot;, ISBLANK(Airline_Upgrade__c))</errorConditionFormula>
    <errorDisplayField>Airline_Upgrade__c</errorDisplayField>
    <errorMessage>You can&apos;t relate the Component Type &quot;Flight Upgrade&quot; by anything else but an Airline Upgrade.</errorMessage>
</ValidationRule>