force-app/main/default/objects/Component__c/validationRules/Correct_Relation_City.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_Relation_City</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Component_Type__c) = &quot;Departure City Surcharge&quot;, ISBLANK( City__c ))</errorConditionFormula>
    <errorMessage>You can&apos;t relate the Component Type &quot;Departure City Surcharge&quot; by anything else but a City.</errorMessage>
</ValidationRule>