force-app/main/default/objects/Component__c/validationRules/Correct_Relation_Land_Activity.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_Relation_Land_Activity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Component_Type__c) = &quot;Land Activity&quot;, ISBLANK(Land_Activity__c))</errorConditionFormula>
    <errorDisplayField>Land_Activity__c</errorDisplayField>
    <errorMessage>You can&apos;t relate the Component Type &quot;Land Activity&quot; by anything else but a Land Activity.</errorMessage>
</ValidationRule>