force-app/main/default/objects/Component__c/validationRules/Correct_Relation_StopOver.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_Relation_StopOver</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Component_Type__c) = &quot;S/Over&quot;, ISBLANK(Stopover__c))</errorConditionFormula>
    <errorDisplayField>Stopover__c</errorDisplayField>
    <errorMessage>You can&apos;t relate the Component Type &quot;S/Over&quot; by anything else but a Stopover.</errorMessage>
</ValidationRule>