force-app/main/default/objects/Component__c/validationRules/Currency_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Currency_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(CurrencyIsoCode) !=  TEXT(Product_FX_Pricing__r.RBA_Exchange_Rate__r.currency_code__c)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Both the Currency Field should have same value</errorMessage>
</ValidationRule>